# study_google_cloud

cloud_run/: Dockerfile  README.md  main.go
cloud_sql/: .dockerignore  .env.tmpl  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  init_env.sh  sqlx-data.json
cloud_sql/migrations/: 20211205132724_init.sql
cloud_sql/src/: main.rs  route.rs
