[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.0-beta.8"
anyhow = "1.0.51"
structopt = "0.3.25"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "offline", "postgres", "runtime-tokio-native-tls"]
